# BashRandomCracker

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
benches/: benchmark.rs
src/: cli.rs  lib.rs  log.rs  main.rs  random.rs
