[package]
name = "bashrand"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.2", features = ["derive"] }
crossbeam-channel = "0.5.8"
rayon = "1.7.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false

[profile.test]
# Optimize tests, specifically for find_all_new() which takes a few seconds
opt-level = 3
