[package]
name = "bashrand"
version = "0.1.0"
edition = "2021"
authors = ["Jorian Woltjer (J0R1AN)"]
license = "MIT OR Apache-2.0"
description = "Crack Bash's $RANDOM variable with 2-3 samples"
readme = "README.md"
homepage = "https://github.com/JorianWoltjer/BashRandomCracker"
repository = "https://github.com/JorianWoltjer/BashRandomCracker"
keywords = ["bash", "rng", "brute-force", "random", "algorithm"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.3.2", features = ["derive"] }
crossbeam-channel = "0.5.8"
rayon = "1.7.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false

[profile.test]
# Optimize tests, specifically for find_all...() which takes a few seconds
opt-level = 3
